assets/css/styles.css
/* Main Styles */

body {
  font-family: Helvetica, sans-serif;
  color: seashell;
  font-size: 22px;
  background-color: black;
  text-align: center;
  margin: 0;
}


a {
  color: seashell;
}

/* Header */

header {
  width: 100%;
  height: 69px;
  border-bottom: 1px solid seashell;
  position: fixed;
  z-index: 10;
  background-color: black;
  margin-top: auto;
  margin-bottom: auto;

}

.nav img {
  height: 50px;
  left: 10px;
  margin-left: 10px;
}

/*
nav {
  text-align: right;
  position: absolute;
  right: 20px;

}*/

.nav {
  display: flex;
  align-items: center; /* Keeps logo vert centered in header */
}


.nav-right {
  width: 100%;
  background-color: black;
  display: flex;
  justify-content: flex-end; /* Puts nav links right justified */
  padding-right: 10px; /* Padding for nav links */
}


.nav li {
  display: inline-block;
  text-align: center;
  padding-left: 10px;
}

/* Main Content */

.main {
  width: 1200px;
  opacity: 0.9;
  padding-top: 70px;
  margin: auto;
}

/* Mission */

#mission {
  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
  height: 700px;
  padding-top: 70px;
}

.mission-header {
  display: flex;
  align-items: center;
  align-content: space-around;


}

.mission-content {
  width: 100%;
  background-color: black;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Featured */

#featured {
  width: 1000px;
  margin: auto;

}
.featured-container {
  display: flex;
  align-items: center;

  justify-content: center;
}
/*
#featured .container {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;

} */

.featured-item {
  display: inline-block;

}

.featured-item img {
  width: 300px;
  height: 200px;
  margin: 10px;
}

#wrap {
  flex-wrap: wrap;
}

